--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "start": "webpack serve --open --mode development"
   },
   "keywords": [],
   "author": "Larry Villegas <larry_villegas@gmail.com>",
@@ -15,7 +16,8 @@
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.2",
     "webpack": "^5.77.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
